--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
     <script nomodule src="/build/chat-bot.js"></script>
   </head>
   <body>
-    <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
+    <chat-bot></chat-bot>
   </body>
 </html>
